--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     depends_on:
       - db
   db:
-    image: postgres:14-alpine
+    image: postgres:14
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: rinha-go-crebito
