Adiciona postgresql.conf a docker-compose-prod.yml

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -34,6 +34,7 @@ services:
     volumes:
       - ./sql/init.sql:/docker-entrypoint-initdb.d/1-init.sql
       - ./sql/seed.sql:/docker-entrypoint-initdb.d/2-seed.sql
+      - ./postgresql.conf:/etc/postgresql/postgresql.conf
     ports:
       - 5432:5432
     deploy:
