--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -3,6 +3,9 @@ version: '3.9'
 services:
   api1: &api
     image: lucassperez/go-crebito:latest
+    build:
+      dockerfile: Dockerfile
+      target: prod
     hostname: api1
     environment:
       # The db service's name
