--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,25 +2,27 @@ version: '3.9'
 
 services:
   api:
+    image: go-crebito
     build:
       dockerfile: Dockerfile
       target: dev
-    image: go-crebito-local
     environment:
-      # The db service's name
-      PG_HOST: db
       SERVER_ADDRESS: 4000
+      DB_HOST: db
+      DB_USER: rinheiro
+      DB_PASSWORD: rinha123
+      DB_NAME: rinha-go-crebito
     volumes:
       - .:/app
     ports:
-      # host:container
       - 4000:4000
     depends_on:
       - db
   db:
     image: postgres:14
     environment:
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: rinheiro
+      POSTGRES_PASSWORD: rinha123
       POSTGRES_DB: rinha-go-crebito
     volumes:
       - ./sql/init.sql:/docker-entrypoint-initdb.d/init.sql
